# keybow2040

./: .gitignore  README.md  pyproject.toml
keybow/: code.py
keybow/lib/: waffle-10.bdf
keybow/lib/src/: config.py  control.py  keybow.py  macro_pad.py  screen.py  utils.py
keybow/lib/src/ir_remotes/: remote.py
keybow/lib/src/ir_remotes/encoders/: lumene.py  nec.py  rc5.py  utils.py
misc/ir_remotes/: compute_avg.py  parse_ir_ctl.py
misc/ir_remotes/config/: benq.toml  feintech.toml  lumene.toml  myamp.toml  tangent.toml
